// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneratePropsJavaInterface can generate for 'ArrayPropsNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/ArrayPropsNativeComponentViewManagerInterface.java": "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableArray;

public interface ArrayPropsNativeComponentViewManagerInterface<T extends View> {
  void setNames(T view, @Nullable ReadableArray value);
  void setDisableds(T view, @Nullable ReadableArray value);
  void setProgress(T view, @Nullable ReadableArray value);
  void setRadii(T view, @Nullable ReadableArray value);
  void setColors(T view, @Nullable ReadableArray value);
  void setSrcs(T view, @Nullable ReadableArray value);
  void setPoints(T view, @Nullable ReadableArray value);
  void setSizes(T view, @Nullable ReadableArray value);
  void setObject(T view, @Nullable ReadableArray value);
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'BooleanPropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/BooleanPropNativeComponentViewManagerInterface.java": "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;

public interface BooleanPropNativeComponentViewManagerInterface<T extends View> {
  void setDisabled(T view, boolean value);
  void setDisabledNullable(T view, @Nullable Boolean value);
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'ColorPropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/ColorPropNativeComponentViewManagerInterface.java": "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;

public interface ColorPropNativeComponentViewManagerInterface<T extends View> {
  void setTintColor(T view, @Nullable Integer value);
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'EdgeInsetsPropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/EdgeInsetsPropNativeComponentViewManagerInterface.java": "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;

public interface EdgeInsetsPropNativeComponentViewManagerInterface<T extends View> {
  // No props
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'EnumPropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/EnumPropNativeComponentViewManagerInterface.java": "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;

public interface EnumPropNativeComponentViewManagerInterface<T extends View> {
  void setAlignment(T view, @Nullable String value);
  void setIntervals(T view, @Nullable Integer value);
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'EventNestedObjectPropsNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/EventNestedObjectPropsNativeComponentViewManagerInterface.java": "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;

public interface EventNestedObjectPropsNativeComponentViewManagerInterface<T extends View> {
  void setDisabled(T view, boolean value);
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'EventPropsNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/EventPropsNativeComponentViewManagerInterface.java": "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;

public interface EventPropsNativeComponentViewManagerInterface<T extends View> {
  void setDisabled(T view, boolean value);
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'FloatPropsNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/FloatPropsNativeComponentViewManagerInterface.java": "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;

public interface FloatPropsNativeComponentViewManagerInterface<T extends View> {
  void setBlurRadius(T view, float value);
  void setBlurRadius2(T view, float value);
  void setBlurRadius3(T view, float value);
  void setBlurRadius4(T view, float value);
  void setBlurRadius5(T view, float value);
  void setBlurRadius6(T view, float value);
  void setBlurRadiusNullable(T view, @Nullable Float value);
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'ImagePropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/ImagePropNativeComponentViewManagerInterface.java": "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;

public interface ImagePropNativeComponentViewManagerInterface<T extends View> {
  void setThumbImage(T view, @Nullable ReadableMap value);
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'IntegerPropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/IntegerPropNativeComponentViewManagerInterface.java": "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;

public interface IntegerPropNativeComponentViewManagerInterface<T extends View> {
  void setProgress1(T view, int value);
  void setProgress2(T view, int value);
  void setProgress3(T view, int value);
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'InterfaceOnlyNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/InterfaceOnlyNativeComponentViewManagerInterface.java": "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;

public interface InterfaceOnlyNativeComponentViewManagerInterface<T extends View> {
  void setTitle(T view, @Nullable String value);
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'MultiNativePropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/MultiNativePropNativeComponentViewManagerInterface.java": "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;

public interface MultiNativePropNativeComponentViewManagerInterface<T extends View> {
  void setThumbImage(T view, @Nullable ReadableMap value);
  void setColor(T view, @Nullable Integer value);
  void setThumbTintColor(T view, @Nullable Integer value);
  void setPoint(T view, @Nullable ReadableMap value);
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'NoPropsNoEventsNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/NoPropsNoEventsNativeComponentViewManagerInterface.java": "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;

public interface NoPropsNoEventsNativeComponentViewManagerInterface<T extends View> {
  // No props
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'ObjectPropsNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponentManagerInterface.java": "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;

public interface ObjectPropsNativeComponentManagerInterface<T extends View> {
  void setObjectProp(T view, @Nullable ReadableMap value);
  void setObjectArrayProp(T view, @Nullable ReadableMap value);
  void setObjectPrimitiveRequiredProp(T view, @Nullable ReadableMap value);
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'PointPropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/PointPropNativeComponentViewManagerInterface.java": "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;

public interface PointPropNativeComponentViewManagerInterface<T extends View> {
  void setStartPoint(T view, @Nullable ReadableMap value);
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'StringPropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/StringPropNativeComponentViewManagerInterface.java": "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;

public interface StringPropNativeComponentViewManagerInterface<T extends View> {
  void setPlaceholder(T view, @Nullable String value);
  void setDefaultValue(T view, @Nullable String value);
}
",
}
`;
